# VVPS

./: .gitignore  CMakeLists.txt  ReadMe.txt
docs/: ~$ПС_Testing Plan.docx  ВВПС_Testing Plan.docx
src/: CMakeLists.txt  main.cpp
src/DataComponent/: CSV.h  DataComponent.cpp  DataComponent.h
src/FPGrowth/: FPGrowth.cpp  FPGrowth.hpp
test/: CMakeLists.txt  FPTest.cpp  PhilippeFourierExampleTest.cpp  VVPSTest.cpp
